feat: support dismissing mistake-book items
